--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -2,10 +2,10 @@
   "tabWidth": 2,
   "useTabs": false,
   "singleQuote": true,
-  "semi": false,
+  "semi": true,
   "bracketSpacing": true,
   "arrowParens": "avoid",
-  "trailingComma": "es6",
+  "trailingComma": "none",
   "bracketSameLine": true,
   "printWidth": 80
 }
